# BadTexter

./: README.md  package.json  pnpm-lock.yaml  start_project.sh
backend/: pyproject.toml
backend/backend/: main.py  scraper.py
src/app/: page.tsx
test_env/: pyvenv.cfg
