[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tyler Yang <tsyang59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imessage-reader = "^0.6.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
fastapi-middleware = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
